ajust css + font

--- a/src/styles/custom-dayPicker.css
+++ b/src/styles/custom-dayPicker.css
@@ -87,7 +87,7 @@
 
 .rdp-month:last-child {
   margin-right: 0;
-  @apply bg-zinc-900 p-2 rounded-lg border border-zinc-700;
+  @apply bg-zinc-900 p-2 rounded-lg border border-zinc-700 text-gray-300;
 }
 
 .rdp-table {
